Justified columns on Detail page

--- a/app/templates/app/detail_base.html
+++ b/app/templates/app/detail_base.html
@@ -71,7 +71,7 @@
     <div class="panel-body parts-panel">
         <table class="table table-striped">
             <thead>
-                <td class="col-sm-1"><b>Task</b></td>
+                <td class="col-xs-10"><b>Task</b></td>
                 <td class="col-sm-1"><b>Number</b></td>
                 <td class="col-sm-1"><b>Completed</b></td>
             </thead>
@@ -98,7 +98,7 @@
     <div class="panel-body parts-panel">
         <table class="table table-striped">
             <thead>
-                <td class="col-sm-1"><b>Part</b></td>
+                <td class="col-xs-10"><b>Part</b></td>
                 <td class="col-sm-1"><b>Number</b></td>
                 <td class="col-sm-1"><b>Completed</b></td>
             </thead>
@@ -124,7 +124,7 @@
     <div class="panel-body parts-panel">
         <table class="table table-striped">
             <thead>
-                <td class="col-sm-1"><b>Accessory</b></td>
+                <td class="col-xs-10"><b>Accessory</b></td>
                 <td class="col-sm-1"><b>Number</b></td>
                 <td class="col-sm-1"><b>Completed</b></td>
             </thead>
