--- a/app/templates/app/detail_base.html
+++ b/app/templates/app/detail_base.html
@@ -72,7 +72,7 @@
         <table class="table table-striped">
             <thead>
                 <td class="col-xs-10"><b>Task</b></td>
-                <td class="col-sm-1"><b>Number</b></td>
+                <td class="col-sm-1"><b>#</b></td>
                 <td class="col-sm-1"><b>Completed</b></td>
             </thead>
             {% for task in tasks %}
@@ -99,7 +99,7 @@
         <table class="table table-striped">
             <thead>
                 <td class="col-xs-10"><b>Part</b></td>
-                <td class="col-sm-1"><b>Number</b></td>
+                <td class="col-sm-1"><b>#</b></td>
                 <td class="col-sm-1"><b>Completed</b></td>
             </thead>
             {% for part in parts %}
@@ -125,7 +125,7 @@
         <table class="table table-striped">
             <thead>
                 <td class="col-xs-10"><b>Accessory</b></td>
-                <td class="col-sm-1"><b>Number</b></td>
+                <td class="col-sm-1"><b>#</b></td>
                 <td class="col-sm-1"><b>Completed</b></td>
             </thead>
             {% for accessory in accessories %}
