Fixed bug where only one task/part displayed on /edit
Problem was that both the forloop over tasks/parts and
the process_string() function in the loop body both modified
a global "i". Have to have either the forloop counter be a "var"
or all the loop body references to i be "var"s.

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -9,10 +9,10 @@
           rel="stylesheet" media="screen">
     <script src="{% static 'js/jquery-2.1.4.min.js' %}"
             type="text/javascript"
-            charset="utf-8" async defer></script>
+            charset="utf-8" defer></script>
     <script src="{% static 'js/bootstrap.min.js' %}"
             type="text/javascript"
-            charset="utf-8" async defer></script>
+            charset="utf-8" defer></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1,
                               maximum-scale=1, user-scalable=0"/>
