--- a/app/templates/app/bike_inventory.html
+++ b/app/templates/app/bike_inventory.html
@@ -5,7 +5,7 @@
 <div class="btn-group btn-group-justified" role="group" aria-label="...">
     <a href="{% url 'app:rental' %}" class="btn btn-default btn-lg btn-skinny" role="button">Rental</a>
     <a href="{% url 'app:refurbished' %}" class="btn btn-default btn-lg btn-skinny" role="button">Refurb</a>
-    <a href="{% url 'app:buy_backs' %}" class="btn btn-default btn-lg btn-skinny" role="button">Buy Backs</a>
+    <a href="{% url 'app:buy_back' %}" class="btn btn-default btn-lg btn-skinny" role="button">Buy Backs</a>
 </div>
 
 
