--- a/app/templates/app/new_rental.html
+++ b/app/templates/app/new_rental.html
@@ -7,7 +7,7 @@
         {% csrf_token %}
 
         {{ form|bootstrap }}
-        <input type="submit" value="Submit">
+        <button type="submit" class="form-control btn btn-default  btn-fat">Submit</button>
     </form>
 
 {% endblock %}
