--- a/app/templates/app/buy_back.html
+++ b/app/templates/app/buy_back.html
@@ -3,23 +3,21 @@
 {% block content %}
 <br>
 <div class="btn-group btn-group-justified" role="group" aria-label="...">
-    <a href="{% url 'app:new_rental' %}" class="btn btn-default btn-lg" role="button" >Add Bike</a>
+    <a href="{% url 'app:new_buy_back' %}" class="btn btn-default btn-lg" role="button" >Add Bike</a>
     <a class="btn btn-default btn-lg" href="{% url 'app:bike_inventory' %}" role="button">Our Bikes</a>
 </div>
 
-{% if rentals %}
-    <h3>Rental Bikes</h3>
+{% if buy_backs %}
+    <h3> Buy-Back Bikes</h3>
 
     <table class="table">
     <thead>
-        <td>ID</td>
         <td>VIN Number</td>
     </thead>
 
-    {% for rental in rentals %}
+    {% for buy_back in buy_backs %}
         <tr>
-            <td>{{ rental.id }}</td>
-            <td><a href="{% url 'app:rental_detail' rental.id %}">{{ rental.vin }}</a></td>
+            <td><a href="{% url 'app:buy_back_detail' buy_back.id %}">{{ buy_back.vin }}</a></td>
         </tr>
     {% endfor %}
     </table>
